--- a/index.html
+++ b/index.html
@@ -1,24 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Zomato</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar">
             <div class="navbar_brand">
-            <img src="images/logo.png" alt="logo " class="navbar_logo">
+                <img src="images/logo.png" alt="logo " class="navbar_logo">
             </div>
             <br>
             <div class="navbar_itemss">
-                <button class="nav_item" >Order Food</button>
+                <button class="nav_button">Order Food</button>
             </div>
         </nav>
-    </header>    
+    </header>
+    <!--we are giving container class as it is a part of bootstrap
+    and throughout the entire web page it will be proving us some margins and padding  -->
+    <main class="container">
+        <section class="section_container">
+            <div class="section_img_container">
+                <img src="images/section.png" alt="image" class="section_image">
+            </div>
+            <div class="section_description">
+                <h1 class="section_text">
+                    Order food from favourite restaurants near you.
+                </h1>
+                <br>
+                <div class="section_items">
+                    <button class="nav_button">Order Now</button>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- explore menu -->
+        <section class="explore_container">
+            <h1 class="explore_container_text">Explore Our Menu</h1>
+            <div class="explore_lists">
+                <!-- burger card -->
+                <div class="food_card" id="burger_card">
+                    <div class="food_card_image_container">
+                        <img src="images/burger.jpg" alt="burger" class="food_image">
+                    </div>
+                    <div class="food_card_description">
+                        <h3 class="food_title">Burger</h3>
+                        <p>Burger King,Mcdonalds,Burger Place <span style="color: crimson;">+3</span></p>
+                    </div>
+                </div>
+                <!--pizza card -->
+                <div class="food_card" id="pizza_card">
+                    <div class="food_card_image_container">
+                        <img src="images/pizza.jpg" alt="pizza" class="food_image">
+                    </div>
+                    <div class="food_card_description">
+                        <h3 class="food_title">Pizza</h3>
+                        <p>Pizza Hut,Domino's Pizza<span style="color: crimson;">+3</span></p>
+                    </div>
+                </div>
+                <!--ice-cream card  -->
+                <div class="food_card" id="ice-cream_card">
+                    <div class="food_card_image_container">
+                        <img src="images/ice-cream.jpg" alt="ice-cream" class="food_image">
+                    </div>
+                    <div class="food_card_description">
+                        <h3 class="food_title">Ice-Cream</h3>
+                        <p>Baskin Robins,Ibaco<span style="color: crimson;">+3</span></p>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <br>
+
+        <!-- section 2 -->
+        <section class="info_container">
+            <div class="info_container_image">
+                <img src="images/item2.png" alt="restaurant1" class="info_image">
+                <img src="images/collection3.jpg" alt="restaurant2" class="info_image">
+                <img src="images/res1.jpg" alt="restaurant3" class="info_image">
+                <img src="images/res2.jpg" alt="restaurant4" class="info_image">
+            </div>
+            <div class="info_container_text">
+                <h1 class="info_text">Order From 100s of restaurants</h1>
+            </div>
+            <br>
+        </section>
+
+        <section class="info2">
+            <div class="info2_text">
+                <h1 class="stay_updated">Stay updated</h1>
+                <br>
+                <form class="emailForm">
+                    <input class="emailField" type="email" name="email" id="email" placeholder="Email">
+                    <button class="nav_button">Get Updates</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <!-- footer -->
+
+    <footer class="info">
+        <div class="footer">
+            <img src="images/heroSectionLogo.png" alt="" class="footer_image">
+            <div>
+            <h3 class="names">Pricing</h3>
+            <h3 class="names">Terms and Conditions</h3>
+            <h3 class="names">Partnership</h3>
+            <h3 class="names">Career</h3>
+            <h3 class="names">contact</h3>
+            </div>
+        </div>
+        <div class="disclamer" style="font-size: 10px;">
+            By continuing past this page, you agree to our Terms of Service, Cookie
+            Policy, Privacy Policy and Content Policies. All trademarks are
+            properties of their respective owners. 2008-2022 © Zomato™ Ltd. All
+            rights reserved.
+        </div>
+    </footer>
+
+    
+
+    
 </body>
+
 </html>
